# python-semver

./: .coveragerc  .editorconfig  .gitignore  .pytest.ini  .readthedocs.yaml  .ruff.toml  .travis.yml  BUILDING.rst  CHANGELOG  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  CONTRIBUTORS  MANIFEST  MANIFEST.in  Makefile  README.md  README.rst  SUPPORT.md  conftest.py  pyproject.toml  release-procedure.md  semver.py  setup.cfg  setup.py  test_semver.py  tests.py  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  feature_request.md  feature_request.yaml
.github/workflows/: black-formatting.yml  codeql-analysis.yml  publish-to-test-pypi.yml  python-testing.yml  release.yml
changelog.d/: 169.deprecation.rst  169.feature.rst  169.trivial.rst  213.improvement.rst  234.deprecation.rst  236.deprecation.rst  270.feature.rst  276.feature.rst  284.deprecation.rst  284.doc.rst  284.feature.rst  291.bugfix.rst  303.doc.rst  303.feature.rst  304.doc.rst  304.trivial.rst  305.doc.rst  305.feature.rst  309.trivial.rst  310.bugfix.rst  312.doc.rst  313.trivial.rst  315.doc.rst  316.trivial.rst  319.trivial.rst  322.trivial.rst  335.doc.rst  340.doc.rst  343.doc.rst  344.bugfix.rst  347.trivial.rst  350.doc.rst  351.doc.rst  364.feature.rst  372.deprecation.rst  373.trivial.rst  374.bugfix.rst  374.trivial.rst  378.trivial.rst  388.trivial.rst  (+31 more)
docs/: Makefile  api.rst  build-semver.rst  build.rst  changelog-2.7.9-and-before.rst  changelog-semver2.rst  changelog-semver3-devel.rst  changelog.rst  cli.rst  coerce.py  conf.py  development.rst  index.rst  install.rst  make.bat  migratetosemver3.rst  pysemver.rst  readme.rst  requirements.txt  semverwithvprefix.py  usage.rst  version-policy.rst
docs/_api/: semver.__about__.rst
docs/_static/css/: custom.css  default.css  semver.css
docs/_templates/: layout.html
docs/_templates/autosummary/: class.rst  module.rst
docs/advanced/: coerce.py  combine-pydantic-and-semver.rst  convert-pypi-to-semver.rst  create-subclasses-from-version.rst  deal-with-invalid-versions.rst  display-deprecation-warnings.rst  index.rst  semverwithvprefix.py  version-from-file.rst
docs/contribute/: add-changelog-entry.rst  doc-semver.rst  finish-release.rst  index.rst  prerequisites.rst  release-procedure.rst  report-bugs.rst  run-test-suite.rst
docs/inventories/: python-objects.inv
docs/migration/: index.rst  migratetosemver3.rst  replace-deprecated-functions.rst
docs/usage/: access-parts-of-a-version.rst  access-parts-through-index.rst  check-compatible-semver-version.rst  check-valid-semver-version.rst  compare-versions-through-expression.rst  compare-versions.rst  convert-version-into-different-types.rst  create-a-version.rst  create-subclasses-from-version.rst  deal-with-invalid-versions.rst  determine-version-equality.rst  get-min-and-max-of-multiple-versions.rst  increase-parts-of-a-version_prereleases.rst  index.rst  parse-version-string.rst  raise-parts-of-a-version.rst  replace-parts-of-a-version.rst  semver-version.rst  semver_org-version.rst
semver/: __init__.py  core.py
src/semver/: __about__.py  __init__.py  __main__.py  _deprecated.py  _types.py  cli.py  ranges.lark  spec.py  version.py  versionregex.py
tests/: coerce.py  conftest.py  semver_test.py  semverwithvprefix.py  test_bump.py  test_compare.py  test_core.py  test_deprecated_functions.py  test_docstrings.py  test_format.py  test_immutable.py  test_index.py  test_match.py  test_max-min.py  test_parsing.py  test_pydantic.py  test_pysemver-cli.py  test_replace.py  test_semver.py  test_spec.py  test_subclass.py  test_typeerror-274.py
