#
# Metadata for setup.py
#
# See https://setuptools.rtfd.io/en/latest/userguide/declarative_config.html

[metadata]
name = semver
version = attr: semver.__about__.__version__
description = Python helper for Semantic Versioning (https://semver.org)
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Kostiantyn Rybnikov
author_email = k-bx@k-bx.com
maintainer = Sebastien Celles, Tom Schraitle
maintainer_email = s.celles@gmail.com
url = https://github.com/python-semver/python-semver
project_urls =
    Changelog = https://python-semver.readthedocs.io/en/latest/changelog.html
    Documentation = https://python-semver.rtfd.io
    Releases = https://github.com/python-semver/python-semver/releases
    Bug Tracker = https://github.com/python-semver/python-semver/issues
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries :: Python Modules
license = BSD

[options]
package_dir =
    =src
packages = find:
python_requires = >=3.7
include_package_data = True

[options.entry_points]
console_scripts =
    pysemver = semver.cli:main

[options.packages.find]
where = src

[options.package_data]
semver = py.typed

[tool:pytest]
norecursedirs = .git build .env/ env/ .pyenv/ .tmp/ .eggs/ venv/
testpaths = tests docs
pythonpath = src tests
filterwarnings =
    ignore:Function 'semver.*:DeprecationWarning
    # ' <- This apostroph is just to fix syntax highlighting
addopts =
    --import-mode=importlib
    --no-cov-on-fail
    --cov=semver
    --cov-report=term-missing
    --doctest-glob='*.rst'
    --doctest-modules
    --doctest-report ndiff

[flake8]
max-line-length = 88
extend-ignore = E203,E701
extend-exclude =
    .eggs
    .env
    .venv
    build
    docs
    venv*
    .venv*
    conftest.py
    src/semver/__init__.py
    tasks.py

[pycodestyle]
count = False
ignore = E203,E701
# E226,E302,E41
max-line-length = 88
statistics = True
exclude =
    src/semver/__init__.py
    .env,
    .eggs,
    .tox,
    .git,
    docs
